# dde-launcher

./: .clog.toml  .gitignore  .gitlab-ci.yml  .packit.yaml  .project  .travis.yml  CHANGELOG  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  appitemdelegate.cpp  appitemdelegate.h  applistview.cpp  applistview.h  categorytitlewidget.cpp  categorytitlewidget.h  constants.h  dde-launcher-wapper  dde-launcher-wapper.in  dde-launcher.desktop  dde-launcher.pro  feature-macros.pri  fullscreenframe.cpp  fullscreenframe.h  gen_report.sh  historywidget.cpp  historywidget.h  images.qrc  launcherinterface.h  launchersys.cpp  launchersys.h  lupdate.sh  main.cpp  mainframe.cpp  mainframe.h  mian.cpp  miniframe.cpp  miniframe.h  newframe.cpp  (+9 more)
.obs/: workflows.yml
.reuse/: dep5
.tx/: config
app/: daemon.h  define.h  desktopapp.cpp  desktopapp.h  global.h  launcherapp.cpp  launcherapp.h  logmanager.cpp  mainframe.cpp  mainframe.h  signalmanager.h  xcb_misc.cpp  xcb_misc.h
archlinux/: PKGBUILD
background/: backgroundlabel.cpp  backgroundlabel.h  systembackground.cpp  systembackground.h
boxframe/: backgroundmanager.cpp  backgroundmanager.h  boxframe.cpp  boxframe.h  boxframe.pri
configs/: com.deepin.dde.dde-launcher.dconfig.json  default.json  org.deepin.dde.launcher.json  org.deepin.launcher.json
controller/: dbuscontroller.cpp  dbuscontroller.h  dbusworker.cpp  dbusworker.h  menucontroller.cpp  menucontroller.h  plugincontroller.cpp  plugincontroller.h
cutelogger/: Logger.cpp  Logger.h
data/: launcher_uninstall.json  preset-order-mips.conf  preset-order.conf
dbus/: categoryinfo.cpp  categoryinfo.h  dbusdisplay.h  dbusfileinfo.cpp  dbusfileinfo.h  dbuslauncher.h  dbuslauncherframe.cpp  dbusmenu.cpp  dbusmenumanager.h  dbustartmanager.cpp  dbustartmanager.h  fileInfo_interface.cpp  fileInfo_interface.h  frequencyinfo.h  installedtimeinfo.cpp  installedtimeinfo.h  iteminfo.h  menumanager.xml
dbusinterface/: coplauncher_interface.cpp  dbusdock.h  dbusdockedappmanager.h  dbusinterface.pri  dbuslauncher.cpp  dbuslauncher.h  dbuslauncherframe.h  dbusmenumanager.h  dbustype.cpp  dbustype.h  dde_launchder_interface.cpp  dde_launcher_interface.h  dock.xml  dock_interface.cpp  dock_interface.h  launcher.xml  launcher_interface.cpp  launcheradaptor.cpp  launcheradaptor.h  launcherinterface.xml  launchersettings.xml  launchersettings_interface.cpp  launchersettings_interface.h  monitorinterface.cpp  monitorinterface.h  notification.xml  notification_interface.cpp  notification_interface.h  startmanager.xml  startmanager_interface.cpp  startmanager_interface.h
dbusservices/: com.deepin.dde.Launcher.service  dbuslauncherservice.cpp  dbuslauncherservice.h
dde-launcher/: dde-launcher.pro  main.cpp  skin.qrc
debian/: changelog  control  copyright  dde-launcher.install  postinst  postrm  rules
delegate/: appitemdelegate.cpp  appitemdelegate.h  applistdelegate.cpp  applistdelegate.h
dialogs/: appearce.qrc  confirmuninstalldialog.cpp  confirmuninstalldialog.h  dbasedialog.cpp  dbasedialog.h  dialogs.pri  dmovabledialog.cpp
docs/: 启动器插件的工作原理.md
global_util/: calcuate_util.h  calcuateutil.h  calculate_util.cpp  calculate_util.h  calculateutil.cpp  constants.h  global.h  recentlyused.cpp  recentlyused.h  signalmanager.h  singleton.h  themeappicon.cpp  themeappicon.h  util.cpp  util.h  xcb_misc.cpp  xcb_misc.h
gschema/: com.deepin.dde.launcher.gschema.xml
interfaces/: common.h  plugininterface.h  pluginproxyinterface.h
misc/: CMakeLists.txt
misc/dbus/: org.deepin.dde.Launcher1.service.in  org.deepin.dde.Launcher1.xml
misc/systemd/user/: org.deepin.dde.Launcher1.service.in
model/: .appsmanager.cpp.swp  appslistmodel.cpp  appslistmodel.h  appsmanager.cpp  appsmanager.h  cachegenerater.cpp  cachegenerater.h  historymodel.cpp  historymodel.h
plugins/: CMakeLists.txt
plugins/appsearch/: CMakeLists.txt  appsearch.json  appsearchplugin.cpp  appsearchplugin.h
plugins/system-desktop/: CMakeLists.txt  plugin.json  systemdesktopplugin.cpp  systemdesktopplugin.h
rpm/: dde-launcher.spec
tests/: CMakeLists.txt  dde_launcher_unit_test.cpp  dde_launcher_unit_test.h  main.cpp  test-recoverage.sh  tst_boxframe.cpp  tst_calculate_util.cpp  tst_fullscreenframe.cpp  tst_launchersys.cpp  tst_menuwroker.cpp  ut_dde_launcher.cpp  ut_dde_launcher.h  ut_fullscreenframe.cpp  ut_iconfreshthread.cpp  ut_launchersys.cpp  ut_sharedeventfilter.cpp  ut_windowedframe.cpp
tests/boxfram_unit_test/: tst_boxframe.cpp  ut_boxframe.cpp
tests/dbusinterface_unit_test/: ut_dbusdock.cpp
tests/global_util_unit_test/: tst_calculate_util.cpp  tst_recentlyused.cpp  ut_calculate_util.cpp  ut_recentlyused.cpp  ut_util.cpp
tests/view_unit_test/: tst_appgridview.cpp  tst_applistview.cpp  tst_multipagesview.cpp  tst_pagecontrol.cpp  ut_appgridview.cpp  ut_applistview.cpp  ut_multipagesview.cpp  ut_pagecontrol.cpp
tests/widget_unit_test/: tst_applistarea.cpp  tst_avatar.cpp  tst_blurboxwidget.cpp  tst_categorybutton.cpp  tst_categorytitlewidget.cpp  tst_datetimewidget.cpp  tst_gradientlabel.cpp  tst_hseparator.cpp  tst_maskqwidget.cpp  tst_minicategorywidget.cpp  tst_miniframebutton.cpp  tst_miniframenavigation.cpp  tst_miniframerightbar.cpp  tst_miniframeswitchbtn.cpp  tst_modetogglebutton.cpp  tst_scrollwidgetagent.cpp  tst_searchlineedit.cpp  ut_appdirwidget.cpp  ut_applistarea.cpp  ut_avatar.cpp  ut_blurboxwidget.cpp  ut_categorybutton.cpp  ut_categorytitlewidget.cpp  ut_datetimewidget.cpp  ut_gradientlabel.cpp  ut_hseparator.cpp  ut_maskqwidget.cpp  ut_minicategoryitem.cpp  ut_minicategorywidget.cpp  ut_miniframebutton.cpp  ut_miniframenavigation.cpp  ut_miniframerightbar.cpp  ut_miniframeswitchbtn.cpp  ut_modetogglebutton.cpp  ut_navigationwidget.cpp  ut_roundedbutton.cpp  ut_scrollwidgetagent.cpp  ut_searchlineedit.cpp  ut_searchwidget.cpp
tests/worker_unit_test/: tst_menuworker.cpp  ut_menuworker.cpp
unittest/: CMakeLists.txt  dde_launcher_unit_test.cpp  dde_launcher_unit_test.h  main.cpp  test_res.qrc  tst_fullscreenframe.cpp  tst_menuwroker.cpp  tst_util.cpp  tst_windowedframe.cpp
(+493 files in other folders)
